# novobusanalyzer

./: README.md  vcpkg.json
.github/workflows/: windows-build.yml
Sources/BUSMASTER/: CMakeLists.txt  RuntimeDeployment.cmake
Sources/BUSMASTER/Application/: BUSMASTER.cpp  BusStatisticCAN.cpp  BusStatisticLIN.cpp  InterfaceGetter.cpp  InterfaceGetter.h  MainFrm.cpp  MainFrm.h  MessageWindowSettingsDialog.cpp  MessageWindowSettingsDialog.h  MsgBufferConfigPage.cpp  MsgFilterConfigPage.cpp  MsgFrmtWnd.cpp  MsgFrmtWnd.h  MsgSignal.cpp  MsgSignal.h  MsgSignalDBWnd.cpp  MsgSignalDBWnd.h  MultiLanguage.h  NotificWnd.cpp  NotificWnd.h  PPageMessage.cpp  PPageMessage.h  Resource.h  RxMsgList.cpp  Splash.cpp  Splash.h  StdAfx.h  TxMsgWndJ1939.cpp  TxMsgWndLIN.cpp  UIThread.cpp  UIThread.h
Sources/BUSMASTER/CAN_ICS_neoVI/: CAN_ICS_neoVI.cpp  CAN_ICS_neoVI.rc  CAN_ICS_neoVI_Resource.h  CMakeLists.txt  ChangeRegisters_CAN_ICS_neoVI.cpp  ChangeRegisters_CAN_ICS_neoVI.h  NeoVIDeviceDiscovery.h  NeoVIDeviceDiscoveryDlg.cpp
Sources/BUSMASTER/CAN_Kvaser_CAN/: CMakeLists.txt
Sources/BUSMASTER/CAN_STUB/: CAN_STUB.cpp  CMakeLists.txt
Sources/BUSMASTER/CAN_VSCOM/: can_setup.cpp
Sources/BUSMASTER/CAN_iVIEW/: CAN_i-VIEW.cpp  VCiViewIF.h
Sources/BUSMASTER/DataTypes/: AccessDBManager.cpp
Sources/BUSMASTER/FormatConverter/DBC2DBFConverterLibrary/: DBFMessage.cpp  DBFSignal.cpp
Sources/BUSMASTER/FormatConverter/FormatConverterApp/: DefConverterPage.cpp  FormatConverter.exe.manifest  FormatConverterApp.cpp  FormatConverterWnd.cpp  FormatConverterWnd.h  MultiLanguage.cpp  MultiLanguage.h  PluginManagerDLL.cpp
Sources/BUSMASTER/FrameProcessor/: ConfigMsgLogCANDlg.cpp  ConfigMsgLogDlg.cpp  ConfigMsgLogDlg.h  ConfigMsgLogJ1939Dlg.cpp  ConfigMsgLogLINDlg.cpp
Sources/BUSMASTER/LDFEditor/: LDFDatabaseManager.cpp
Sources/BUSMASTER/LIN_Kvaser/: CMakeLists.txt
Sources/BUSMASTER/NodeSimEx/: SimSysNodeInfo.cpp
Sources/BUSMASTER/SigGrphWnd/: CMakeLists.txt  GraphBottomView.cpp  GraphBottomView.h
Sources/BUSMASTER/SignalWatch/: SigWatchDlg.cpp  SigWatchDlg.h
Sources/BUSMASTER/TXWindow/: CANTxFormView.cpp  CANTxMsgItem.cpp  CANTxMsgItem.h  CCheckColumnTreeCtrl.cpp  ITxFormView.cpp  ScheduleTableCfgDlg.cpp  ScheduleTableCfgDlg.h  TXWindow.cpp  TXWindow_Extern.cpp
Sources/BUSMASTER/TestSetupEditorGUI/: TSEditorGUI_ChildFrame.cpp  TSEditorGUI_PropertyView.cpp  TSEditorGUI_SettingsDlg.cpp  TSEditorGUI_stdafx.h  TestAutomationEditor.cpp  stdafx.h
Sources/BUSMASTER/TestSetupEditorGUI/Res/: TestAutomationEditor.exe.manifest
Sources/BUSMASTER/TestSetupEditorLib/: BaseEntityTA.cpp  DataBaseMsgList.cpp  TestSetupEditorLib_stdafx.h
Sources/BUSMASTER/TestSuiteExecutorGUI/: TSExecutorGUI_ChildFrame.cpp  TSExecutorGUI_ChildFrame.h  TSExecutorGUI_stdafx.h
Sources/BUSMASTER/UDS_Protocol/: UDSSettingsWnd.cpp
Sources/BUSMASTER/Utility/: ColumnTreeWnd.cpp  ColumnTreeWnd.h  NumSpinCtrl.cpp  Utility.cpp
Sources/BUSMASTER/cmake/: DeployNovoBusAnalyzer.cmake  VerifyX64Runtime.ps1
Sources/Kernel/BusmasterDBNetwork/: AccessDBManager.cpp  BusMasterNetWork.cpp  BusMasterNetWork.h
Sources/Kernel/BusmasterDBNetwork/Include/: IBMNetWorkService.h
Sources/Kernel/BusmasterDriverInterface/DIL_J1939/: NodeConManager.cpp
Tests/Samples/CAN/: README.md  dbc_smoke.dbc  dbc_smoke_a.dbc  dbc_smoke_b.dbc
packaging/: ci_novobusanalyzer_installer.nsi
